--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -14,11 +14,16 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^12.0.1",
+    "cordova-plugin-file": "^8.1.0",
+    "cordova-plugin-media": "^7.0.0",
+    "cordova-plugin-music-controls2": "^3.0.7",
     "cordova-plugin-splashscreen": "^6.0.1"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-splashscreen": {}
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-media": {},
+      "cordova-plugin-music-controls2": {}
     }
   }
 }
