--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -14,11 +14,17 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^12.0.1",
+    "cordova-ios": "^7.1.0",
+    "cordova-plugin-ionic-webview": "^5.0.1",
     "cordova-plugin-splashscreen": "^6.0.1"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-splashscreen": {}
-    }
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
+    },
+    "platforms": [
+      "ios"
+    ]
   }
 }
